--- a/rootdir/init.vince.rc
+++ b/rootdir/init.vince.rc
@@ -25,30 +25,23 @@
 # ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #
 
-on boot
-
-    # add for goodix 
+on init
+    # Goodix fingerprint
     chown system system /dev/goodix_fp
-    chmod 0644 /dev/goodix_fp
-    
-    # add for fpc 
+
+on boot
     chown system system /sys/devices/soc/soc:fpc1020/compatible_all
-    chmod 0664 /sys/devices/soc/soc:fpc1020/compatible_all
     chown system system /sys/devices/soc/soc:fpc1020/irq
-    chmod 0660 /sys/devices/soc/soc:fpc1020/irq
     chown system system /sys/devices/soc/soc:fpc1020/hw_reset
-    chmod 0660 /sys/devices/soc/soc:fpc1020/hw_reset
     chown system system /sys/devices/soc/soc:fpc1020/wakeup_enable
-    chmod 0660 /sys/devices/soc/soc:fpc1020/wakeup_enable
     chown system system /sys/devices/soc/soc:fpc1020/fingerdown_wait
-    chmod 0660 /sys/devices/soc/soc:fpc1020/fingerdown_wait
-
-on property:sys.fp.vendor=goodix
-   setprop ro.boot.fpsensor goodix
-   setprop persist.sys.fp.vendor goodix
-
-on property:sys.fp.vendor=FPC
-   setprop ro.boot.fpsensor fpc
+    chown system system /sys/devices/soc/soc:fpc1020/vendor
+    chmod 0700 /sys/devices/soc/soc:fpc1020/compatible_all
+    chmod 0700 /sys/devices/soc/soc:fpc1020/irq
+    chmod 0700 /sys/devices/soc/soc:fpc1020/hw_reset
+    chmod 0700 /sys/devices/soc/soc:fpc1020/wakeup_enable
+    chmod 0700 /sys/devices/soc/soc:fpc1020/fingerdown_wait
+    chmod 0700 /sys/devices/soc/soc:fpc1020/vendor
 
 service goodix_script /vendor/bin/init.goodix.sh
     class late_start
@@ -74,4 +67,10 @@ service sptest /vendor/bin/sh vendor/bin/sp_test.sh
 on property:sys.sptest.sp=1
     start sptest
 #smartpa test for E7 --end
+
+on post-fs-data
+    mkdir /data/vendor/fpc 0770 system system
+    mkdir /data/vendor/goodix 0770 system system
+    chown system system /data/vendor
+    chgrp system system /data/vendor
 
