--- a/rootdir/init.vince.rc
+++ b/rootdir/init.vince.rc
@@ -36,12 +36,21 @@ on boot
     chown system system /sys/devices/soc/soc:fpc1020/wakeup_enable
     chown system system /sys/devices/soc/soc:fpc1020/fingerdown_wait
     chown system system /sys/devices/soc/soc:fpc1020/vendor
+    chown system system /data/misc/fpc/calibration_image.pndat
     chmod 0700 /sys/devices/soc/soc:fpc1020/compatible_all
     chmod 0700 /sys/devices/soc/soc:fpc1020/irq
     chmod 0700 /sys/devices/soc/soc:fpc1020/hw_reset
     chmod 0700 /sys/devices/soc/soc:fpc1020/wakeup_enable
     chmod 0700 /sys/devices/soc/soc:fpc1020/fingerdown_wait
     chmod 0700 /sys/devices/soc/soc:fpc1020/vendor
+    chmod 0600 /data/misc/fpc/calibration_image.pndat
+
+on property:sys.fp.vendor=goodix
+   setprop ro.boot.fpsensor goodix
+   setprop persist.sys.fp.vendor goodix
+
+on property:sys.fp.vendor=FPC
+   setprop ro.boot.fpsensor fpc
 
 service goodix_script /vendor/bin/init.goodix.sh
     class late_start
@@ -71,6 +80,7 @@ on property:sys.sptest.sp=1
 on post-fs-data
     mkdir /data/vendor/fpc 0770 system system
     mkdir /data/vendor/goodix 0770 system system
+    mkdir /persist/fpc 0770 system system
     chown system system /data/vendor
     chgrp system system /data/vendor
 
